cros: Defer lockscreen updateUserImage and loadUser calls.

Add DCHECKs so we can get stack traces to confirm the root cause and change fix if needed.

BUG=699798

Review-Url: https://codereview.chromium.org/2766393003
Cr-Commit-Position: refs/heads/master@{#458952}

Former-commit-id: cf76073aac63d2e460740d7562ee1523e6a0c7d8